-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta4
-
None
-
1
-
454636afe (dev), 66d10dc25 (6.6), 4dc4bf6cf (6.6.0)
-
Foundation Sprint 90
https://doc-snapshots.qt.io/qt6-dev/qttypes.html doesn't have it.
| For Gerrit Dashboard: QTBUG-116925 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 503440,2 | Document q(u)int128 and QT_SUPPORTS_INT128 | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 503591,4 | Document q(u)int128 and QT_SUPPORTS_INT128 | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 503885,2 | Document q(u)int128 and QT_SUPPORTS_INT128 | 6.6.0 | qt/qtbase | Status: MERGED | +2 | 0 |