Document q(u)int128 and QT_SUPPORTS_INT128

[ChangeLog][QtCore] Added qint128 and quint128 typedefs on platforms
that support them.

Fixes: QTBUG-116925
Change-Id: Ibd55cb0b1931b48a91598d3165e5911e3a4079f2
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 454636afec1be8d4483b65ae564487eca9734ffd)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 66d10dc25369bfb03fb526ada97394b8af114039)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>